--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ button {
 	outline: 0;
 	background-color: white;
 	border-radius: 5px;
-	margin-top: 10px;
+
 	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 
 }
@@ -279,7 +279,7 @@ tr{
 }
 
 .pad{
-	padding-top: 120px;
+	padding-top: 100px;
 }
 
 .status-t-style{
@@ -292,7 +292,8 @@ tr{
 	transform: translateX(-50%);
 }
 .icons{
-	width: 30px;
+	width: 20px;
+	margin-left: 12px;
 
 }
 
@@ -300,7 +301,30 @@ tr{
 	color: white;
 	font-size: 35px;
 }
+.center-center{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
 
+.btn-neg-val{
+	display: flex;
+	justify-content: center;
+}
+
+.profile-t-style{
+	width: 100%;
+	background-color: rgb(87,148,204);
+	color:white;
+	text-align: center;
+}
+
+.profile-t{
+	height: 300px;
+	overflow: scroll;
+	margin-bottom: 30px;
+}
 
 
 
